# azure-iot-sdks

./: .gitmodules
c/iotdm_client/: CMakeLists.txt  README
c/iotdm_client/inc/: iotdm_client.h
c/iotdm_client/samples/: CMakeLists.txt
c/iotdm_client/samples/beaglebonegreen_kit/: CMakeLists.txt  object_device.c  object_humidity_sensor.c  object_led.c  object_security.c  object_server.c  object_temp_sensor.c  object_template.c  program.c  program.h
c/iotdm_client/samples/simple_client/: CMakeLists.txt  object_device.c  object_humidity_sensor.c  object_led.c  object_security.c  object_server.c  object_temp_sensor.c  simple_client.c
c/iotdm_client/src/: iotdm_client.c
